// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Burnout with first burnout preset should not render last marker 1`] = `
preact-render-spy (1 nodes)
-------
<article class="timeline burnout">
  <h2>burnout</h2>
  <output class="group calc">
    <dl class="control">
      <dt>time</dt>
      <dd>
        8
        <span>hours</span>
      </dd>
    </dl>
  </output>
  <section class="steps">
    <input
      class="tab segmentsTab"
      type="radio"
      name="view"
      id="segments"
      value="segments"
      checked={false}
     />
    <label for="segments">segments</label>
    <input
      class="tab stepsTab"
      type="radio"
      name="view"
      id="steps"
      value="steps"
      checked={false}
     />
    <label for="steps">steps</label>
    <section class="tabPages">
      <table>
        <thead>
          <tr>
            <th>segment</th>
            <th>rate</th>
            <th>temp</th>
            <th>hold</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <a
                href="#water-removal"
                tabIndex={-1}
              >
                water removal
              </a>
            </td>
            <td>
              300
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              300
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              1 
              <span>hours</span>
            </td>
          </tr>
          <tr>
            <td>
              <a
                href="#thermal-transition"
                tabIndex={-1}
              >
                thermal transition
              </a>
            </td>
            <td>
              400
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              700
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              1 
              <span>hours</span>
            </td>
          </tr>
          <tr>
            <td>
              <a
                href="#pattern-removal"
                tabIndex={-1}
              >
                pattern removal
              </a>
            </td>
            <td>
              325
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              1350
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              2 
              <span>hours</span>
            </td>
          </tr>
          <tr>
            <td>
              <a
                href="#casting"
                tabIndex={-1}
              >
                casting
              </a>
            </td>
            <td>
              700
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              700
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              1 
              <span>hours</span>
            </td>
          </tr>
        </tbody>
      </table>
      <ol>
        <li>
          <a
            href="#water-removal"
            tabIndex={-1}
          >
            raise to
            <span> 300</span>
            ° over 
            <span> 1 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#water-removal"
            tabIndex={-1}
          >
            hold
            <span> 300</span>
            ° for 
            <span> 1 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#thermal-transition"
            tabIndex={-1}
          >
            raise to
            <span> 700</span>
            ° over 
            <span> 1 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#thermal-transition"
            tabIndex={-1}
          >
            hold
            <span> 700</span>
            ° for 
            <span> 1 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#pattern-removal"
            tabIndex={-1}
          >
            raise to
            <span> 1350</span>
            ° over 
            <span> 2 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#pattern-removal"
            tabIndex={-1}
          >
            hold
            <span> 1350</span>
            ° for 
            <span> 2 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#casting"
            tabIndex={-1}
          >
            lower to
            <span> 700</span>
            ° over 
            <span> 0.9 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#casting"
            tabIndex={-1}
          >
            hold
            <span> 700</span>
            ° for 
            <span> 1 </span>
            hour
          </a>
        </li>
      </ol>
    </section>
  </section>
  <section class="diagram">
    <a
      name="water-removal"
      class="segment"
    >
      <article
        class="raise"
        style="margin-top: 132px;"
      >
        <figure class="ambient">
          <figcaption>ambient</figcaption>
        </figure>
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            300
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            300
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            1
            <span class="units"> hour</span>
          </figcaption>
        </figure>
      </article>
    </a>
    <a
      name="thermal-transition"
      class="segment"
    >
      <article
        class="raise"
        style="margin-top: 88px;"
      >
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            700
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            400
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            1
            <span class="units"> hour</span>
          </figcaption>
        </figure>
      </article>
    </a>
    <a
      name="pattern-removal"
      class="segment"
    >
      <article
        class="raise"
        style="margin-top: 44px;"
      >
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            1350
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            325
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            2
            <span class="units"> hours</span>
          </figcaption>
        </figure>
      </article>
    </a>
    <a
      name="casting"
      class="segment"
    >
      <article
        class="lower"
        style="margin-top: 44px;"
      >
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            700
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            700
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            1
            <span class="units"> hour</span>
          </figcaption>
        </figure>
      </article>
    </a>
  </section>
</article>

`;

exports[`Burnout with last burnout preset should render last marker 1`] = `
preact-render-spy (1 nodes)
-------
<article class="timeline burnout">
  <h2>burnout</h2>
  <output class="group calc">
    <dl class="control">
      <dt>time</dt>
      <dd>
        15
        <span>hours</span>
      </dd>
    </dl>
  </output>
  <section class="steps">
    <input
      class="tab segmentsTab"
      type="radio"
      name="view"
      id="segments"
      value="segments"
      checked={false}
     />
    <label for="segments">segments</label>
    <input
      class="tab stepsTab"
      type="radio"
      name="view"
      id="steps"
      value="steps"
      checked={false}
     />
    <label for="steps">steps</label>
    <section class="tabPages">
      <table>
        <thead>
          <tr>
            <th>segment</th>
            <th>rate</th>
            <th>temp</th>
            <th>hold</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <a
                href="#water-removal"
                tabIndex={-1}
              >
                water removal
              </a>
            </td>
            <td>
              300
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              300
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              3 
              <span>hours</span>
            </td>
          </tr>
          <tr>
            <td>
              <a
                href="#thermal-transition"
                tabIndex={-1}
              >
                thermal transition
              </a>
            </td>
            <td>
              200
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              700
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              2 
              <span>hours</span>
            </td>
          </tr>
          <tr>
            <td>
              <a
                href="#pattern-removal"
                tabIndex={-1}
              >
                pattern removal
              </a>
            </td>
            <td>
              217
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              1350
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              3 
              <span>hours</span>
            </td>
          </tr>
          <tr>
            <td>
              <a
                href="#casting"
                tabIndex={-1}
              >
                casting
              </a>
            </td>
            <td>
              700
              <span aria-hidden="true">
                °F/hr
                <span class="offScreen">degrees Fahrenheit per hour</span>
              </span>
            </td>
            <td>
              700
              <span aria-hidden="true">
                °F
                <span class="offScreen">degrees Fahrenheit</span>
              </span>
            </td>
            <td>
              2 
              <span>hours</span>
            </td>
          </tr>
        </tbody>
      </table>
      <ol>
        <li>
          <a
            href="#water-removal"
            tabIndex={-1}
          >
            raise to
            <span> 300</span>
            ° over 
            <span> 1 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#water-removal"
            tabIndex={-1}
          >
            hold
            <span> 300</span>
            ° for 
            <span> 3 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#thermal-transition"
            tabIndex={-1}
          >
            raise to
            <span> 700</span>
            ° over 
            <span> 2 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#thermal-transition"
            tabIndex={-1}
          >
            hold
            <span> 700</span>
            ° for 
            <span> 2 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#pattern-removal"
            tabIndex={-1}
          >
            raise to
            <span> 1350</span>
            ° over 
            <span> 3 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#pattern-removal"
            tabIndex={-1}
          >
            hold
            <span> 1350</span>
            ° for 
            <span> 3 </span>
            hours
          </a>
        </li>
        <li>
          <a
            href="#casting"
            tabIndex={-1}
          >
            lower to
            <span> 700</span>
            ° over 
            <span> 0.9 </span>
            hour
          </a>
        </li>
        <li>
          <a
            href="#casting"
            tabIndex={-1}
          >
            hold
            <span> 700</span>
            ° for 
            <span> 2 </span>
            hours
          </a>
        </li>
      </ol>
    </section>
  </section>
  <section class="diagram">
    <a
      name="water-removal"
      class="segment"
    >
      <article
        class="raise"
        style="margin-top: 132px;"
      >
        <figure class="ambient">
          <figcaption>ambient</figcaption>
        </figure>
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            300
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            300
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            3
            <span class="units"> hours</span>
          </figcaption>
        </figure>
      </article>
    </a>
    <a
      name="thermal-transition"
      class="segment"
    >
      <article
        class="raise"
        style="margin-top: 88px;"
      >
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            700
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            200
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            2
            <span class="units"> hours</span>
          </figcaption>
        </figure>
      </article>
    </a>
    <a
      name="pattern-removal"
      class="segment"
    >
      <article
        class="raise"
        style="margin-top: 44px;"
      >
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            1350
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            217
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            3
            <span class="units"> hours</span>
          </figcaption>
        </figure>
      </article>
    </a>
    <a
      name="casting"
      class="segment"
    >
      <article
        class="lower"
        style="margin-top: 44px;"
      >
        <figure class="temperature">
          <figcaption>
            <h3>temp</h3>
            700
            <span class="units">°F</span>
          </figcaption>
        </figure>
        <figure class="rate">
          <figcaption>
            <h3>rate</h3>
            700
            <span class="units">°F/hr</span>
          </figcaption>
        </figure>
        <figure class="time">
          <figcaption>
            <h3>hold</h3>
            2
            <span class="units"> hours</span>
          </figcaption>
        </figure>
      </article>
    </a>
  </section>
</article>

`;
